Added Mobile Center crash and analytics support.

--- a/DroneLander/DroneLander/DroneLander.csproj
+++ b/DroneLander/DroneLander/DroneLander.csproj
@@ -7,6 +7,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AppCenter.Analytics" Version="1.1.0" />
     <PackageReference Include="Microsoft.AppCenter.Crashes" Version="1.1.0" />
+    <PackageReference Include="Microsoft.Azure.Mobile.Analytics" Version="0.18.0" />
+    <PackageReference Include="Microsoft.Azure.Mobile.Crashes" Version="0.18.0" />
     <PackageReference Include="Xamarin.Forms" Version="2.5.0.122203" />
   </ItemGroup>
 
