--- a/DroneLander/DroneLander.Android/DroneLander.Android.csproj
+++ b/DroneLander/DroneLander.Android/DroneLander.Android.csproj
@@ -61,6 +61,12 @@
     <PackageReference Include="Microsoft.AppCenter.Crashes">
       <Version>1.1.0</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.Azure.Mobile.Analytics">
+      <Version>0.18.0</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Azure.Mobile.Crashes">
+      <Version>0.18.0</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="2.5.0.122203" />
     <PackageReference Include="Xamarin.Android.Support.Design" Version="25.4.0.2" />
     <PackageReference Include="Xamarin.Android.Support.v7.AppCompat" Version="25.4.0.2" />
