--- a/DroneLander/DroneLander.UWP/DroneLander.UWP.csproj
+++ b/DroneLander/DroneLander.UWP/DroneLander.UWP.csproj
@@ -168,6 +168,12 @@
     <PackageReference Include="Microsoft.AppCenter.Crashes">
       <Version>1.1.0</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.Azure.Mobile.Analytics">
+      <Version>0.18.0</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Azure.Mobile.Crashes">
+      <Version>0.18.0</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="2.5.0.122203" />
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.0.1" />
   </ItemGroup>
