--- a/DroneLander/DroneLander.iOS/DroneLander.iOS.csproj
+++ b/DroneLander/DroneLander.iOS/DroneLander.iOS.csproj
@@ -133,6 +133,12 @@
     <PackageReference Include="Microsoft.AppCenter.Crashes">
       <Version>1.1.0</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.Azure.Mobile.Analytics">
+      <Version>0.18.0</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Azure.Mobile.Crashes">
+      <Version>0.18.0</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="2.5.0.122203" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
