--- a/DroneLander/DroneLander/DroneLander.csproj
+++ b/DroneLander/DroneLander/DroneLander.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Microsoft.AppCenter.Analytics" Version="1.1.0" />
     <PackageReference Include="Microsoft.AppCenter.Crashes" Version="1.1.0" />
     <PackageReference Include="Microsoft.Azure.Mobile.Analytics" Version="0.18.0" />
+    <PackageReference Include="Microsoft.Azure.Mobile.Client" Version="3.0.1" />
     <PackageReference Include="Microsoft.Azure.Mobile.Crashes" Version="0.18.0" />
     <PackageReference Include="Xamarin.Forms" Version="2.5.0.122203" />
   </ItemGroup>
@@ -19,5 +20,11 @@
     <Compile Condition=" '$(EnableDefaultCompileItems)' == 'true' " Update="MainPage.xaml.cs">
       <DependentUpon>*.xaml</DependentUpon>
     </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="ViewActivityPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
